--- a/src/pages/LoginPage/_LoginPage.scss
+++ b/src/pages/LoginPage/_LoginPage.scss
@@ -1,9 +1,4 @@
-$primary-color: #9877e8;
-$secondary-color: #ff8084;
-
-h1 {
-  font-size: 10px;
-}
+@import "./variables.scss";
 
 .login__form {
   display: flex;
@@ -12,14 +7,18 @@ h1 {
   flex-direction: column;
 }
 .form__data {
-  border: 2px solid #9877e8;
+  border: 2px solid $primary-color;
   display: block;
   padding-top: 5px;
+  padding-bottom: 5px;
   padding-left: 5px;
   margin-top: 10px;
+  &[placeholder] {
+    font-family: "Blatant", sans-serif;
+  }
 }
 
-.form__btn {
+.main-btn {
   background-color: $secondary-color;
   color: #fff;
   border: none;
@@ -27,16 +26,9 @@ h1 {
   padding: 10px 20px;
   margin-top: 20px;
   border-radius: 60px;
-}
-
-.form__label {
-  font-size: 10px;
-  font-family: "Verdana", sans-serif;
-  text-transform: uppercase;
-}
-
-.nav__link {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+  font-family: "Blatant", sans-serif;
+  &:hover {
+    background-color: #ff5c61;
+    transition: 0.5s;
+  }
 }
