--- a/src/css/_config.scss
+++ b/src/css/_config.scss
@@ -5,14 +5,29 @@
   src: url("./font/Blatant.otf") format("opentype");
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Blatant", sans-serif;
-  box-sizing: border-box;
   height: 100vh;
 }
 
 .container,
 .tasks__container {
+  // max-width: 1440px;
+  // width: 100%;
+  // height: calc(100vh - 90px);
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  // flex-direction: column;
+  // border-radius: 50px;
+  // background: url(../img/home_bg.svg) no-repeat center center;
+  // background-size: contain;
   max-width: 1000px;
   width: 100%;
   margin: 10px auto;
@@ -25,16 +40,33 @@ body {
   border-radius: 50px;
 }
 
+.home_bg {
+  background: url(../img/home_bg.png) no-repeat center center;
+}
+.form__wrapper {
+  background-color: #ffffffb7;
+  width: 30%;
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 50px;
+  padding: 15px 0;
+}
+
 .main-nav {
   display: flex;
   justify-content: flex-end;
-  height: 30px;
+  align-items: center;
+  margin-right: 50px;
+  height: 50px;
 }
 
 .main-nav__link {
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 0.8em;
+  font-size: 1.2em;
   padding: 5px 0;
   margin: 0 20px;
   color: #403179;
@@ -48,6 +80,7 @@ body {
 
 .page-header_text {
   font-size: 1em;
+  margin: 10px 0;
   color: $text-color;
   text-transform: uppercase;
 }
@@ -58,16 +91,129 @@ body {
   justify-content: space-evenly;
 }
 
-.tasks__el-container {
+// .tasks__el-container {
+//   background-color: #fff;
+//   border-radius: 50px;
+//   height: 400px;
+//   width: 300px;
+//   &:last-of-type {
+//     width: 500px;
+//   }
+// }
+
+@mixin container-setup {
   background-color: #fff;
   border-radius: 50px;
-  height: 400px;
+  height: 450px;
+}
+
+.tasks__progress-container {
+  @include container-setup;
   width: 300px;
-  &:last-of-type {
-    width: 500px;
-  }
+}
+
+.tasks__cal-container {
+  @include container-setup;
+  width: 500px;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .tasks__list {
-  text-decoration: none;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  flex-direction: column;
+  height: 80%;
+  li {
+    width: 100px;
+    color: $text-color;
+    margin: 3px 0;
+  }
 }
+
+// .tasks__task-item {
+//   width: 100px;
+//   border: 2px solid;
+//   color: blue;
+//   margin: 3px 0;
+// }
+
+@mixin button {
+  background-color: $secondary-color;
+  color: #fff;
+  border: none;
+  text-transform: uppercase;
+  padding: 7px 20px;
+  border-radius: 60px;
+  font-family: "Blatant", sans-serif;
+  &:hover {
+    background-color: #ff5c61;
+    transition: 0.5s;
+  }
+}
+
+.main-btn {
+  @include button;
+  margin: 20px 10px;
+}
+
+.add-btn {
+  @include button;
+  margin-left: 5px;
+}
+.btn__logout {
+  @include button;
+  margin-bottom: 7px;
+
+  font-size: 0.8em;
+  background-color: $text-color;
+}
+
+.btn__delete {
+  @include button;
+  display: inline-block;
+  padding: 3px 5px;
+  border-radius: 50%;
+  color: #e4ac14;
+  font-weight: bold;
+  border: 2px solid #e4ac14;
+  background-color: #fff;
+  margin-left: 10px;
+  &:hover {
+    color: #fff;
+    border: 2px solid #ff5c61;
+    background-color: #ff5c61;
+    transition: 0.2s;
+  }
+}
+
+.circle-percentage {
+  font-size: 10px;
+  color: $primary-color;
+}
+
+// .fullScreen {
+//   position: fixed;
+//   width: 100%;
+//   height: 100%;
+//   left: 0;
+//   top: 0;
+//   z-index: 99;
+//   background: rgba(255, 255, 255, 0.7);
+//   display: none;
+// }
+
+// .btn__close {
+//   display: block;
+//   margin: auto;
+// }
+// .cat__img {
+//   display: block;
+//   margin: 15px auto 5px;
+//   width: auto;
+//   height: calc(100% - 50px);
+// }
