--- a/src/css/_Calendar.scss
+++ b/src/css/_Calendar.scss
@@ -1,11 +1,11 @@
 .react-calendar {
-  width: 300px;
-  max-width: 100%;
+  width: 400px;
   background: white;
   border: none;
   font-family: "Blatant" sans-serif;
+  font-weight: bold;
   line-height: 1.125em;
-  margin-top: 40px;
+  margin: 20px;
 }
 .react-calendar--doubleView {
   width: 700px;
@@ -18,6 +18,7 @@
   width: 50%;
   margin: 0.5em;
 }
+
 .react-calendar,
 .react-calendar *,
 .react-calendar *:before,
@@ -69,7 +70,7 @@
   padding: calc(0.75em / 0.75) calc(0.5em / 0.75);
 }
 .react-calendar__month-view__days__day--weekend {
-  color: #d10000;
+  color: #403179;
 }
 .react-calendar__month-view__days__day--neighboringMonth {
   color: #757575;
@@ -109,12 +110,13 @@
   background: #a9d4ff;
 }
 .react-calendar__tile--active {
-  background: #006edc;
+  background: #9877e8;
   color: white;
 }
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
-  background: #1087ff;
+  background: #7f53e6;
+  transition: 0.2s;
 }
 .react-calendar--selectRange .react-calendar__tile--hover {
   background-color: #e6e6e6;
