--- a/src/css/_config.scss
+++ b/src/css/_config.scss
@@ -16,33 +16,23 @@ body {
   height: 100vh;
 }
 
-.container,
-.tasks__container {
-  // max-width: 1440px;
-  // width: 100%;
-  // height: calc(100vh - 90px);
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-  // flex-direction: column;
-  // border-radius: 50px;
-  // background: url(../img/home_bg.svg) no-repeat center center;
-  // background-size: contain;
-  max-width: 1000px;
+@mixin main-container {
   width: 100%;
-  margin: 10px auto;
   height: calc(100vh - 90px);
   display: flex;
+  border-radius: 50px;
+  margin: auto;
+}
+
+.container {
+  @include main-container();
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #e0d8ffce;
-  border-radius: 50px;
+  background: url("../img/home_bg.png") no-repeat center center;
+  background-size: contain;
 }
 
-.home_bg {
-  background: url(../img/home_bg.png) no-repeat center center;
-}
 .form__wrapper {
   background-color: #ffffffb7;
   width: 30%;
@@ -66,7 +56,7 @@ body {
 .main-nav__link {
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 1.2em;
+  font-size: 1em;
   padding: 5px 0;
   margin: 0 20px;
   color: #403179;
@@ -85,62 +75,60 @@ body {
   text-transform: uppercase;
 }
 
-.tasks__container {
+.add-task__container {
+  @include main-container();
+  max-width: 1640px;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
+  background: url("../img/add_task.png") no-repeat center center;
+  background-size: contain;
 }
 
-// .tasks__el-container {
-//   background-color: #fff;
-//   border-radius: 50px;
-//   height: 400px;
-//   width: 300px;
-//   &:last-of-type {
-//     width: 500px;
-//   }
-// }
+.tasks__container {
+  @include main-container();
+  max-width: 1640px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  background: url("../img/form_bg.svg") no-repeat center center;
+  background-size: contain;
+}
 
 @mixin container-setup {
   background-color: #fff;
   border-radius: 50px;
-  height: 450px;
+  height: 500px;
 }
 
 .tasks__progress-container {
   @include container-setup;
-  width: 300px;
+  width: 30%;
+  padding: 0 20px;
 }
 
 .tasks__cal-container {
   @include container-setup;
-  width: 500px;
-  flex-direction: column;
+  width: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+.progress-bar {
+  margin-left: 100px;
 }
 
 .tasks__list {
   list-style-type: none;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
-  flex-direction: column;
-  height: 80%;
   li {
-    width: 100px;
     color: $text-color;
-    margin: 3px 0;
+    margin: 5px 20px;
+    margin: 10px 10px;
+    border-bottom: 1px solid $text-color;
   }
 }
-
-// .tasks__task-item {
-//   width: 100px;
-//   border: 2px solid;
-//   color: blue;
-//   margin: 3px 0;
-// }
 
 @mixin button {
   background-color: $secondary-color;
@@ -183,6 +171,7 @@ body {
   border: 2px solid #e4ac14;
   background-color: #fff;
   margin-left: 10px;
+  margin-bottom: 5px;
   &:hover {
     color: #fff;
     border: 2px solid #ff5c61;
@@ -192,8 +181,8 @@ body {
 }
 
 .circle-percentage {
-  font-size: 10px;
-  color: $primary-color;
+  font-size: 7px;
+  fill: $text-color;
 }
 
 // .fullScreen {
